# swig_test

./: CMakeLists.txt  main.cpp
app/: CMakeLists.txt
app/include/simple/: app.hpp  app_c.h
app/include/simple/app/: types.h
app/python/: CMakeLists.txt  __init__.py.in  app.i  setup.py.in
app/src/: app.cpp  app_c.cpp
